# ik

./: .gitignore  LICENSE  README.md  homework.odt
Versuch6/: CMakeLists.txt  ConstrainedIK.cpp  ConstrainedIK.ui  ConstrainedIKWindow.cpp  ConstrainedIKWindow.h  MyCustomConstraint.cpp  MyCustomConstraint.h  MyDualConstraintIK.cpp  MyDualConstraintIK.h  MySingleConstraintIK.cpp
Versuch6/data/: ConstrainedIKScene3.xml  border.iv  border.xml  floor.xml  glas.iv  glas.xml
Versuch6/data/robot/: ArmarIII-Head.xml
doc/: 01-2 Kinematics and Statics.html  Constraint IK INSTRUCTIONS.html  Constraint IK INSTRUCTIONS.md  Versuch6-Constrained IK.html  Versuch6-Constraint IK INSTRUCTIONS.html  Versuch6-Constraint IK INSTRUCTIONS.md
exercise/: CMakeLists.txt  ConstrainedIK.cpp  ConstrainedIKWindow.cpp  ConstrainedIKWindow.h  MyCustomConstraint.cpp  MyDualConstraintIK.cpp  MySingleConstraintIK.cpp  MySingleConstraintIK.h  SolutionSwitch.h
exercise/data/: ConstrainedIKScene1.xml  ConstrainedIKScene2.xml  ConstrainedIKScene4.xml  floor.iv
exercise/data/robot/: ArmarIII-LeftArm.xml  ArmarIII.xml
